final html file

--- a/iot-applications.html
+++ b/iot-applications.html
@@ -8,6 +8,6 @@
     <title>IoT Applications</title>
   </head>
   <body>
-    <h1>the seminar conducted by kevin sir was very interesting and i liked active learning method</h1>
+    <h1>Ishaan Gupta</h1>
   </body>
 </html>
