NEW - fully final version

--- a/iot-applications.html
+++ b/iot-applications.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="description" content="A web page about IoT Applications" />
-    <meta name="author" content="ENTER YOUR NAME HERE" />
+    <meta name="author" content="ISHAAN GUPTA" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
     <title>IoT Applications</title>
